@@ -2,18 +2,7 @@
   = hidden_field_tag "context", "#{@context}"
   = hidden_field_tag "account[user_id]", @current_user.id
   = f.error_messages
-  .section
-    %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
-      %tr
-        %td{ :valign => :top }
-          .label.top.req Account name:
-          = f.text_field :name, :style => "width:324px"
-        %td= spacer
-        %td{ :valign => :top }
-          .label.top.req Assigned to:
-          = collection_select :account, :assigned_to, @users, :id, :full_name, { :include_blank => "Myself" }, { :style => "width:160px" }
-    -### .label Tags:
-    -### =f.text_field :tags, :style =>"width:500px"
+  = render :partial => "accounts/top_section",  :locals => { :f => f }
   = render :partial => "accounts/contact_info", :locals => { :f => f }
   = render :partial => "accounts/permissions",  :locals => { :f => f }
   .buttonbar
