@@ -1,0 +1,12 @@
+.remote
+  - remote_form_for(@account) do |f|
+    = hidden_field_tag "context", "#{@context}"
+    = hidden_field_tag "account[user_id]", @current_user.id
+    = f.error_messages
+    = render :partial => "accounts/top_section",  :locals => { :f => f }
+    = render :partial => "accounts/contact_info", :locals => { :f => f }
+    = render :partial => "accounts/permissions",  :locals => { :f => f }
+    .buttonbar
+      = f.submit "Save Account" 
+      or 
+      = link_to_remote "Cancel", { :url => edit_account_path(@account), :method => :get, :with => "{ visible: true, context: '#{@context}' }" }
