@@ -1,0 +1,10 @@
+.section
+  %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
+    %tr
+      %td{ :valign => :top }
+        .label.top.req Account name:
+        = f.text_field :name, :style => "width:324px"
+      %td= spacer
+      %td{ :valign => :top }
+        .label.top.req Assigned to:
+        = collection_select :account, :assigned_to, @users, :id, :full_name, { :include_blank => "Myself" }, { :style => "width:160px" }
