@@ -1,16 +1,0 @@
-<h1>Editing account</h1>
-
-<% form_for(@account) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    Name:<br>
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.submit "Update" %>
-  </p>
-<% end %>
-
-<%= link_to 'Show', @account %> |
-<%= link_to 'Back', accounts_path %>
